--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -17,7 +17,7 @@ form {
   flex-direction: column;
 }
   
-  .login-container {
+  .subscribe-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +25,7 @@ form {
     height: 100%;
   }
   
-  .login-card {
+  .subscribe-card {
     background: #fff;
     padding: 2rem;
     border-radius: 10px;
@@ -57,7 +57,7 @@ form {
     border-radius: 5px;
   }
   
-  .login-button {
+  .subscribe-button {
     width: 100%;
     padding: 0.5rem;
     border: none;
@@ -69,7 +69,7 @@ form {
     margin-bottom: 1rem;
   }
   
-  .signup-link {
+  .signin-link {
     font-size: 0.9rem;
   }
   
