--- a/client/src/pages/Account.css
+++ b/client/src/pages/Account.css
@@ -1,18 +1,47 @@
 body, html {
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #f5f5f5;
+    margin: 0;
+    overflow: auto;
+    margin-top: 50px;
+}
+
+body {
+    width: 100%;
+    height: auto;
+}
+
+img {
+    height: 100px;
+    width: 100px;
+    align-self: center;
+}
+
+.content {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+}
+
+.centertestdiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .info {
-    width: 320px;
-    background-color: #ffffff;
-    border: 1px solid #dcdcdc;
-    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    height: auto;
+    width: 35%;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #0C0809;
+    border-radius: 10px;
+    background-color: #ffffff;
 }
 
 .day_choice {
@@ -22,7 +51,7 @@ body, html {
     margin-bottom: 20px;
 }
 
-.div[class^="meal"] {
+/* .div[class^="meal"] {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,4 +71,20 @@ body, html {
     border-radius: 4px;
     text-align: center;
     margin: 0 5px;
+} */
+
+.meal1> input, .meal2> input {
+    width: 25%;
+    height: 20%;
+    margin: 0px 5px;
+}
+
+.meal1, .meal2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.meal1> p, .meal2> p {
+    font-size: x-small;
 }
