--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -78,7 +78,7 @@ form {
 
 /* Add this CSS in your stylesheet (e.g., styles.css) */
 
-body {
+/* body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
   display: flex;
@@ -115,7 +115,7 @@ input[type="password"] {
   padding: 10px;
   border: 1px solid #e3e3e3;
   border-radius: 10px;
-  background-color: #f9f9e9; /* Light beige background */
+  background-color: #f9f9e9;
   margin-bottom: 15px;
   font-size: 16px;
   outline: none;
@@ -148,4 +148,73 @@ p a {
 
 p a:hover {
   text-decoration: underline;
+} */
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin: 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  padding: 2rem 4rem;
+  max-height: 80vh;
+  vertical-align: middle;
+}
+
+.logo {
+  margin-bottom: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 2rem;
+  /* border-radius: 0.5rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); */
+}
+
+input {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  background-color: rgb(244,243,210);
+}
+
+button {
+  width: 100%;
+  background-color: white;
+  color: #0C0809;
+  padding: 0.5rem 1rem;
+  border-color: #293614;
+  border: solid 1px;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #293614;
+  color: white;
+}
+
+.signin-link {
+  color: #0C0809;
+  font-size: small;
+}
+
+.error {
+  color: red;
+  margin-top: 1rem;
+}
+
+.success {
+  color: green;
+  margin-top: 1rem;
 }
