--- a/client/src/pages/Signin.css
+++ b/client/src/pages/Signin.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
 /* Signin.css */
-body {
+/* body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -71,5 +71,88 @@ form {
   
   .signup-link {
     font-size: 0.9rem;
+  } */
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(45deg, rgb(245, 245, 220), rgb(235, 210, 180));
+    background-repeat: no-repeat;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    margin: 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    padding: 2rem 4rem;
+    max-height: 80vh;
+    vertical-align: middle;
   }
   
+  .logo {
+    margin-bottom: 1rem;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 2rem;
+  }
+  
+  input {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+  }
+  
+  button {
+    width: 100%;
+    background-color: white;
+    color: #0C0809;
+    border-color: #293614;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    border: solid 1px;
+  }
+  
+  button:hover {
+    background-color: #293614;
+    color: white;
+  }
+
+  .signup-link {
+    color: #0C0809;
+    font-size: small;
+  }
+  
+  .error {
+    color: red;
+    margin-top: 1rem;
+  }
+  
+  .success {
+    color: green;
+    margin-top: 1rem;
+  }
