--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -151,6 +151,25 @@ p a:hover {
 } */
 
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(45deg, rgb(245, 245, 220), rgb(235, 210, 180));
+  background-repeat: no-repeat;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .container {
   display: flex;
   flex-direction: column;
