--- a/client/src/pages/Signin.css
+++ b/client/src/pages/Signin.css
@@ -82,9 +82,7 @@ form {
   html, body {
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(45deg, rgb(245, 245, 220), rgb(235, 210, 180));
+    /* background: linear-gradient(45deg, rgb(245, 245, 220), rgb(235, 210, 180)); */
     background-repeat: no-repeat;
   }
 
@@ -97,7 +95,8 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    /* background-color: white; */
+    background-color: red;
     margin: 0;
     border-radius: 0.5rem;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -114,7 +113,8 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    /* background-color: white; */
+    background-color: red;
     padding: 2rem;
   }
   
