--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -2,7 +2,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     margin: 0;
     overflow: auto;
 }
@@ -106,7 +106,7 @@ img {
   }
   
   .profile-info {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
   
   /* Headers */
@@ -206,34 +206,37 @@ img {
   
   /* Add some more spacing to the goal card */
   .goal-card {
-    border: 1px solid rgb(229, 231, 235);
+    border: 1px solid black;
     padding: 1.5rem; /* Increased padding */
     border-radius: 0.25rem;
     position: relative;
+    margin-bottom: 2rem;
+    background-color: white;
   }
   
   /* Adjust title size and spacing */
   .goal-title {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 600;
     margin-bottom: 1.5rem;
-    padding-right: 8rem;
+    padding-right: 10rem;
+    text-transform: uppercase;
   }
   
   /* Buttons */
   .button {
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
-    color: white;
+    /* color: white; */
   }
   
   /* Small buttons */
   .button-small {
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0.25rem;
     font-size: 0.875rem;
   }
   
-  .button-primary {
+  /* .button-primary {
     background-color: rgb(59, 130, 246);
   }
   
@@ -260,7 +263,7 @@ img {
   .button-disabled {
     background-color: rgb(156, 163, 175);
     cursor: not-allowed;
-  }
+  } */
   
   /* Loading and Error States */
   .loading-container {
@@ -280,4 +283,13 @@ img {
   
   .error-message {
     color: rgb(220, 38, 38);
+  }
+
+  .edit-button-img, .delete-button-img {
+    height: 1em;
+    width: auto;
+  }
+
+  .button-small:hover {
+    border: solid 2px orange;
   }
