--- a/client/src/pages/Signin.css
+++ b/client/src/pages/Signin.css
@@ -95,8 +95,8 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: white; */
-    background-color: red;
+    background-color: white;
+    /* background-color: red; */
     margin: 0;
     border-radius: 0.5rem;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -113,8 +113,8 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: white; */
-    background-color: red;
+    background-color: white;
+    /* background-color: red; */
     padding: 2rem;
   }
   
@@ -126,7 +126,7 @@ form {
     border-radius: 0.25rem;
   }
   
-  button {
+  /* button {
     width: 100%;
     background-color: white;
     color: #0C0809;
@@ -140,7 +140,7 @@ form {
   button:hover {
     background-color: #293614;
     color: white;
-  }
+  } */
 
   .signup-link {
     color: #0C0809;
