--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,8 +1,8 @@
-body, html {
+/* body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #f5f5f5; */
+    background-color: #f5f5f5;
     margin: 0;
     overflow: auto;
 }
@@ -10,7 +10,7 @@ body, html {
 body {
     width: 100%;
     height: auto;
-}
+} */
 
 img {
     height: 100px;
@@ -229,7 +229,44 @@ img {
     border-radius: 0.25rem;
     /* color: white; */
   }
+
+  .add-goal-btn {
+    width: 100%;
+    background-color: white;
+    color: #0C0809;
+    padding: 0.5rem 1rem;
+    border-color: #293614;
+    border: solid 1px;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+
+  .add-goal-btn:hover {
+    background-color: #293614;
+    color: white;
+  }
   
+  .button-danger {
+    width: 100%;
+    background-color: white;
+    color: #0C0809;
+    padding: 0.5rem 1rem;
+    border-color: #293614;
+    border: solid 1px;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+  
+  .button-danger:hover {
+    background-color: #293614;
+    color: white;
+  }
+  
+  .button-disabled {
+    background-color: rgb(156, 163, 175);
+    cursor: not-allowed;
+  }
+
   /* Small buttons */
   .button-small {
     padding: 0.25rem 0.25rem;
