--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,24 @@
   }
 }
 
+/* body, #root {
+  height: 100%;
+  margin: 0;
+} */
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+}
+
+
+
 /* .App-header {
   background-color: #282c34;
   height: 100vh;
