[STYLE & FEAT] Add legal notice page and style legal notice link

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,7 +1,17 @@
-.mentions {
+.legal-notice {
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
+    padding-bottom: 2rem;
+}
+
+.legal-text {
+    text-decoration: none;
+    font-size: small;
+}
+
+.legal-text:hover {
+    text-decoration: underline;
 }
