[STYLE] Style EditGoal component

--- a/client/src/components/EditGoals.css
+++ b/client/src/components/EditGoals.css
@@ -1,6 +1,12 @@
 .content {
     align-self: center;
     max-width: 42rem;
+    padding-top: 8rem;
+}
+
+.prog_inputs {
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .meal1 {
