--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,11 +1,11 @@
-.legal-notice {
+/* .legal-notice {
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
     padding-bottom: 2rem;
-}
+} */
 
 .legal-text {
     text-decoration: none;
