--- a/client/src/components/AddGoals.css
+++ b/client/src/components/AddGoals.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,28 +50,6 @@ img {
     margin-bottom: 20px;
 }
 
-/* .div[class^="meal"] {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
-}
-
-.div[class^="meal"] label {
-    flex: 1;
-    font-weight: bold;
-    color: #4a4a4a;
-}
-
-.div[class^="meal"] input {
-    width: 50px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    text-align: center;
-    margin: 0 5px;
-} */
-
 .meal1> input, .meal2> input {
     width: 25%;
     height: 20%;
@@ -86,4 +64,58 @@ img {
 
 .meal1> p, .meal2> p {
     font-size: x-small;
+} */
+
+.content {
+    align-self: center;
+    max-width: 42rem;
+    padding-top: 8rem;
+}
+
+.prog_inputs {
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.meal1 {
+    display: flex;
+}
+
+.repas1 {
+    text-transform: capitalize;
+    max-height: 1.5rem;
+    align-self: center;
+}
+
+.day-type {
+    padding-bottom: 0.5rem;
+}
+
+.inputs {
+    display: flex;
+}
+
+.edit-train, .edit-rest {
+    flex-direction: column;
+}
+
+.carbs-info, .proteins-info, .fats-info {
+    flex-direction: row;
+}
+
+.save_button {
+    margin-top: 2rem;
+    width: 100%;
+    background-color: white;
+    color: #0C0809;
+    padding: 0.5rem 1rem;
+    border-color: #293614;
+    border: solid 1px;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.save_button:hover {
+    background-color: #293614;
+    color: white; 
 }
