--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -206,12 +206,12 @@ img {
   
   /* Add some more spacing to the goal card */
   .goal-card {
-    border: 1px solid black;
     padding: 1.5rem; /* Increased padding */
-    border-radius: 0.25rem;
     position: relative;
     margin-bottom: 2rem;
     background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   }
   
   /* Adjust title size and spacing */
