--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -6,6 +6,12 @@
     text-align: center;
     padding-bottom: 2rem;
 } */
+.legal-notice{
+    height: 30px;
+    position: fixed;
+    /* width: 100%; */
+    bottom: 0;
+}
 
 .legal-text {
     text-decoration: none;
